2012-02-21  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* testsuite/testAbstractContext.cpp: Fix testcase.

	* src/mcs/NewContext.cpp: Fix return NULL heads.

	* src/dmcs/Evaluator.cpp: Fix case distinction.

	* src/dmcs/DLVInstantiator.cpp: Pass reference of the thread around.
	* src/dmcs/Instantiator.cpp: Likewise.

	* include/dmcs/DLVEvaluator.h: Create 1 process for each call.
	* src/dmcs/DLVEvaluator.cpp: Likewise.

	* src/mcs/StreamingJoiner.cpp: Fix return NULL.

2012-02-20  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/mcs/NewContext.cpp: Register REQUEST_MQ to md.

	* testsuite/testAbstractContext.cpp: Add testRunningContext.

	* include/network/NewConcurrentMessageDispatcher.h: Return queue size.
	* src/network/NewConcurrentMessageDispatcher.cpp: Likewise.

	* include/dmcs/DLVInstantiator.h: Start and stop threads by instantiators.
	* src/dmcs/DLVInstantiator.cpp: Likewise.
	* include/dmcs/Instantiator.h: Likewise.
	* src/dmcs/Instantiator.cpp: Likewise.
	* src/mcs/NewContext.cpp: Likewise.

	* include/dmcs/AbstractContext.h: Add some list types.

	* testsuite/testAbstractContext.cpp: Fix test case.

	* src/dmcs/Evaluator.cpp: Fix checking last NULL answer.

	* src/dmcs/DLVEvaluator.cpp: Fix return last NULL answer.

2012-02-19  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* src/mcs/NewContext.cpp: A walk-around for the problem of creating thread.

	* src/dmcs/DLVInstantiator.cpp: ConcurrentMessageDispatcher used as parameters
	instead of data member of Evaluator.
	* src/dmcs/Evaluator.cpp: Likewise.

	* include/mcs/NewOutputDispatcher.h: Use timeout.

	* include/mcs/NewContext.h: Implement StreamingDMCS algorithm.
	* src/mcs/NewContext.cpp: Likewise.

	* include/mcs/Makefile.am: Add NewContext.h.
	* src/mcs/Makefile.am: Add NewContext.cpp.

	* include/mcs/BridgeRuleEvaluator.h: Change method's name.
	* src/mcs/BridgeRuleEvaluator.cpp: Likewise.

	* include/dmcs/Instantiator.h: Remove some comment.
